--- a/examples/eks-identity-manager.yaml
+++ b/examples/eks-identity-manager.yaml
@@ -7,8 +7,8 @@ metadata:
 vpc:
   subnets:
     private:
-      us-east-1a: { id: subnet-096f1c279c06bf039 }
-      us-east-1b: { id: subnet-02d926f3feccb7f02 }
+      us-east-1a: { id: subnet-xxxxxx }
+      us-east-1b: { id: subnet-xxxxxx }
   clusterEndpoints:
     publicAccess:  true
 iam:
