--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
       - WorkloadIdentity: api-workloadidentity.md
   - Guides:
       - Introduction: guides-introduction.md
+      - Quick start: guides-quick-start.md
       - Getting started: guides-getting-started.md
       - Developer Guide: developer-guide.md
   - Contributing:
